<resources>
    <string name="app_name">SQLite数据库案例</string>

    <string name="title_name">姓名</string>
    <string name="title_classname">班级</string>
    <string name="title_age">年龄</string>

    <string name="button_text_add">添加</string>
    <string name="button_text_update">修改</string>
    <string name="button_text_delete">删除</string>

    <string-array name="names_random_list">
        <item>张伟</item>
        <item>王伟</item>
        <item>王芳</item>
        <item>李伟</item>
        <item>李娜</item>
        <item>张敏</item>
        <item>李静</item>
        <item>王静</item>
        <item>刘伟</item>
    </string-array>
</resources>